Prevent selection on mobile

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,6 +12,10 @@
     padding: 0px;
     margin: 0px;
     color: var(--c-white);
+
+    -webkit-user-select: none; /* Safari */
+    -ms-user-select: none; /* IE 10 and IE 11 */
+    user-select: none; /* Standard syntax */
 }
 
 a,
